# cliclient

./: Cargo.toml  README.md  template_data  template_data.json  text.ssml  text_document.txt
assets/: EmailIdentyDetails.txt  emails.txt  neural_ssml.ssml  standard_ssml.txt  subject.html  template_data.json
src/: main.rs  possible_errors.txt
