[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Developing Terminal Applications
inquire = {version = "0.6.2",features = ["editor"]}
spinoff = "0.8.0"
colored = "2.0.4"
aws_apis = {git = "https://github.com/Sanjuvi/aws_apis.git"}

tokio = {version ="1.32.0",features = ["macros","rt-multi-thread"]}
dotenv ="0.15.0"




