[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Developing Terminal Applications
inquire = {version = "0.6.2"}
colored = "2.0.4"
aws_apis = {git = "https://github.com/Sanjuvi/aws_apis.git"}
reqwest="0.11.20"
filesize ="0.2.0"

tokio = {version ="1.32.0",features = ["macros","rt-multi-thread"]}
dotenv ="0.15.0"
image ="0.24.7"
imageproc ="0.23.0"
rusttype ="0.9.3"
serde_json = "1.0"

#Regex is employed for locating template variables within the provided data, especially when updating a template. 
# This is particularly useful for providing information about the template during updates. It is also utilized in 
#the utility function called get_template_variables within S3 operations
regex ="1.9.5"



